Fixes contrast issue and label

--- a/src/css/modules/components/banner.css
+++ b/src/css/modules/components/banner.css
@@ -24,6 +24,7 @@
 }
 
 .banner__nav-item {
+  background-color: var(--color-white);
   color: var(--text-primary);
   font-weight: 500;
   position: relative;
